[metadata]
name = znoyder
description_file = README.rst
home_page = https://github.com/rhos-infra/cibyl
author = Red Hat Code Reliability Engineering Team
author_email = rhos-cre@redhat.com
maintainer = Red Hat Code Reliability Engineering Team
maintainer_email = rhos-cre@redhat.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    cibyl

[entry_points]
console_scripts =
    cibyl = cibyl.cli:main

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
